components/policies/rings/ring-2/kflux-ocp-p01/art-token-broker-rbac/deny-art-token-broker-clusterrolebindings-validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: deny-art-token-broker-clusterrolebindings.konflux-ci.dev
spec:
  policyName: deny-art-token-broker-clusterrolebindings.konflux-ci.dev
  validationActions:
  - Deny
