components/policies/rings/ring-2/kflux-ocp-p01/art-token-broker-rbac/restrict-art-token-broker-bindings-validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-art-token-broker-bindings.konflux-ci.dev
spec:
  policyName: restrict-art-token-broker-bindings.konflux-ci.dev
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: konflux-ci.dev/type
        operator: In
        values:
        - tenant
        - managed-tenant
